REF: some changes

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <div class="footer">
             <div class="contact-bio">Hi I'm Rob</div>
             <div class="contact-copyright">
-              <p>  MADE BY <a href="#">ROBERTO</a> </p>
+              <p> <small> MADE BY <a href="#">ROBERTO</a></small> </p>
             </div>
             <div class="contact-footer">
                 <h3>Contact</h3>
