--- a/index.html
+++ b/index.html
@@ -5,30 +5,52 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Roberto Parra</title>
     <link rel="icon" href="./img/Component 1.svg" type="image/icon type">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hamburgers/1.1.3/hamburgers.min.css">
     <link rel="stylesheet" href="./css/cssMain.css">
 </head>
 <body>
+    <div class="menu-navbar1">
+        <div class="panel">
+                <nav class="menu-nav">
+                    <ul class="menu">
+                        <li><a href="#">About</a></li>
+                        <li><a href="#notes">Notes</a></li>
+                        <li><a href="#">Projects</a></li>
+                        <li><a href="#">Resume</a></li>    
+                    </ul>
+                </nav>
+        </div>      
+    </div>
 
-    <header>
+    <header class="contenido">
         <div class="navbar-background"> </div> <!-- Background to put space in header -->
             <div class="content-navbar">
                 <div class="content-nav1">
                     <div id="logo-navbar"><a  id="logo" href="#">  <img src="./img/Component 1.svg"  alt=""> </a></div>
                     <div class="menu-navbar">
-                        <nav class="menu-nav">
-                            <ul class="menu">
-                                <li><a href="#">About</a></li>
-                                <li><a href="#notes">Notes</a></li>
-                                <li><a href="#">Projects</a></li>
-                                <li><a href="#">Resume</a></li>    
-                            </ul>
-                        </nav>
+                        <div class="panel">
+                                <nav class="menu-nav">
+                                    <ul class="menu">
+                                        <li><a href="#">About</a></li>
+                                        <li><a href="#notes">Notes</a></li>
+                                        <li><a href="#">Projects</a></li>
+                                        <li><a href="#">Resume</a></li>    
+                                    </ul>
+                                </nav>
+                        </div>      
                     </div>
+                     <div class="menu-ham">
+                         <button class="panel-btn hamburger hamburger--squeeze" type="button">
+                             <span class="hamburger-box">
+                               <span class="hamburger-inner"></span>
+                             </span>
+                           </button>
+                     </div>                    
                 </div>
             </div>
     </header>
     
-<main class="main-page">
+<main class="main-page contenido">
 
     <div class="hero">
         <h2 id="main-title">Hello, I'm <p id="myname"> Roberto</p></h2>
@@ -92,18 +114,23 @@
 
 </main>
 <footer>
-    <div class="footer">
+    <div class="footer ">
+        <div class="contenido">
+
             <div class="contact-bio">Hi I'm Rob</div>
             <div class="contact-copyright">
-              <p> <small> MADE BY <a href="#">ROBERTO</a></small> </p>
+                <p> <small> MADE BY <a href="#">ROBERTO</a></small> </p>
             </div>
             <div class="contact-footer">
                 <h3>Contact</h3>
                 <a href = "mailto: robertoparra0210@gmail.com">robertoparra0210@gmail.com</a>
                 <a href="https://twitter.com/robparra0210" target="blank">@robparra0210</a>
             </div>
+        </div>
     </div>
 </footer> 
+
+<script src="./js/index_js.js" type="module"></script>
 
 </body>
 </html>
