REF: mejoras html y css

--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
 <body>
 
     <header>
-        <div class="navbar-background"> </div> <!-- Background to put space in header -->
-            <div class="content-navbar">
-                <div class="content-nav1">
-                    <div id="logo-navbar"><a  id="logo" href="#">  <img src="./img/Component 1.svg"  alt=""> </a></div>
+        <div class="navbar-background">  <!-- Background to put space in header --> </div>
+                <div class="content-nav">
+                    <div id="logo-navbar">
+                    	<a  id="logo" href="#"><img src="./img/Component 1.svg"  alt=""></a>
+                    </div>
                     <div class="menu-navbar">
                         <nav class="menu-nav">
                             <ul class="menu">
@@ -25,7 +26,6 @@
                         </nav>
                     </div>
                 </div>
-            </div>
     </header>
     
 <main class="main-page">
@@ -49,14 +49,14 @@
 
                 <h2 id="title-notes">Projects</h2>
                 <div class="notes">
-                    <a href="https://robparra0210.github.io/inviePlatzi/" target="blank">
                         <div class="note">      
+                    <a href="https://robparra0210.github.io/inviePlatzi/" target="blank">
                             <div class="javascrip">
                                 <img src="./img/inive.png" alt="javascript" >    
+                            	<p style=" color: rgba(247, 44, 30, 0.45)">Invie</p>
                             </div>
-                            <p style="  color: rgba(247, 44, 30, 0.45)">Invie</p>
-                        </div>
                     </a>
+                        </div>
                   
                   </div>
             </section>
@@ -91,6 +91,7 @@
     </div>
 
 </main>
+
 <footer>
     <div class="footer">
             <div class="contact-bio">Hi I'm Rob</div>
